traefik/brm_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brm-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /bc
        pathType: Prefix
        backend:
          service:
             name: billingcare-domain-cluster-cluster-1
             port:
               number: 8001
  - host: 
    http:
      paths:
      - path: /pdc
        pathType: Prefix
        backend:
          service:
            name: pdc-service 
            port: 
              number: 8001
  - host: 
    http:
      paths:
      - path: /bcws
        pathType: Prefix
        backend:
          service:
             name: bcws-domain-cluster-cluster-1
             port:
               number: 8001
  - host: 
    http:
      paths:
      - path: /brm
        pathType: Prefix
        backend:
          service:
             name: brm-rest-services-manager 
             port:
               number: 30000
