traefik/brmrsm.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brmrsm
  namespace: brm12-apps
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: brmrsm
spec:
  rules:
  - host:
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
             name: brm-rest-services-manager
             port:
               number: 30000
